--- a/config/config.json
+++ b/config/config.json
@@ -1,3 +1,4 @@
 {
-    "token": "OTM4OTIxOTQ2MDQzNzc3MDU1.GJ2II3.X4i7ydzOhgxNxvX3hfpoX6P-kafGKa9FirVndw"
+    "token": "OTM4OTIxOTQ2MDQzNzc3MDU1.GJ2II3.X4i7ydzOhgxNxvX3hfpoX6P-kafGKa9FirVndw",
+    "mongo": ""
 }
