--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,4 @@
 {
-    "token": "OTM4OTIxOTQ2MDQzNzc3MDU1.GJ2II3.X4i7ydzOhgxNxvX3hfpoX6P-kafGKa9FirVndw",
+    "token": "OTMzNzUyNTQzMjY2MzczNjcz.YemG0g.sEoYY35nmIEwpadjaVZ8F12mJM4",
     "mongo": ""
 }
