--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "dependencies": {
-    "ascii-table": "^0.0.9",
-    "colors": "^1.4.0",
-    "discord.js": "^14.7.1",
-    "glob": "^8.0.3",
-    "mongodb": "^4.13.0",
-    "mongoose": "^6.8.1"
+    "ascii-table": "0.0.9",
+    "colors": "1.4.0",
+    "discord.js": "14.9.0",
+    "glob": "8.0.3",
+    "mongodb": "4.13.0",
+    "mongoose": "6.8.1"
   }
 }
